LlmQueryAnalysis: Fix problem with query encoding